--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -25,7 +25,7 @@
         <div class="col-md-8 col-sm-8">
           <h1>{% include "_brandname.html" %}</h1>
           <p>最专业的团队,最优秀的师资,最快捷的服务</p>
-	  <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">Sign up for Free!</a>
+	  <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">马上免费注册体验!</a>
         </div>
         <div class="col-md-4 col-sm-4">
 
