--- a/src/accounts/templates/accounts/password-reset.html
+++ b/src/accounts/templates/accounts/password-reset.html
@@ -2,9 +2,9 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %}{{ block.super }}Password Reset{% endblock %}
+{% block title %}{{ block.super }}重置密码{% endblock %}
 
-{% block form_heading %}Password Reset{% endblock %}
+{% block form_heading %}重置密码{% endblock %}
 
 {% block form %}
   {% crispy form %}
