--- a/src/accounts/templates/accounts/signup.html
+++ b/src/accounts/templates/accounts/signup.html
@@ -2,16 +2,16 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %}{{ block.super }}Sign Up{% endblock %}
+{% block title %}{{ block.super }}注册{% endblock %}
 
-{% block form_heading %}Signing Up is Free{% endblock %}
+{% block form_heading %}免费注册{% endblock %}
 
 {% block form %}
   {% crispy form %}
 
   <div class="form-message">
     <p>
-      Already signed up? <a href="{% url 'accounts:login' %}">Log in</a>.
+      已经注册? <a href="{% url 'accounts:login' %}">立即登录</a>.
     </p>
   </div>
 {% endblock form %}
