--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -6,7 +6,7 @@
 {% block title %}{{ block.super }}常见问题{% endblock %}
 
 {% block navbar-left %}
-  {% include "_navbar.html" with active_link="about" %}
+  {% include "_navbar.html" with active_link="faq" %}
 {% endblock %}
 
 {% block styles %}
