--- a/src/templates/_navbar.html
+++ b/src/templates/_navbar.html
@@ -1,4 +1,7 @@
 <li {% if active_link == "home" %}class="active"{% endif %}><a href="{% url 'home' %}">首页</a></li>
-<li {% if active_link == "search_teacher" %}class="active"{% endif %}><a href="{% url 'search_teacher' %}">教师列表</a></li>
+<li {% if active_link == "teacher-list" %}class="active"{% endif %}><a href="{% url 'teacher-list' %}">教师列表</a></li>
+<li {% if active_link == "teacher-create" %}class="active"{% endif %}><a href="{% url 'teacher-create' %}">成为老师</a></li>
+<li {% if active_link == "problem-list" %}class="active"{% endif %}><a href="{% url 'problem-list' %}">难题列表</a></li>
+<li {% if active_link == "problem-upload" %}class="active"{% endif %}><a href="{% url 'problem-upload' %}">上传难题</a></li>
 <li {% if active_link == "faq" %}class="active"{% endif %}><a href="{% url 'faq' %}">常见问题</a></li>
 <li {% if active_link == "about" %}class="active"{% endif %}><a href="{% url 'about' %}">关于我们</a></li>
