--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -28,7 +28,7 @@
                 <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">马上免费注册体验!</a>
                 <p/>
                 <p align="left">我是学生,找找有没有合适的老师:</p>
-                <form id="search_teacher_form" action="{% url 'search_teacher' %}" method="get" accept-charset="utf-8">
+                <form id="search_teacher_form" action="{% url 'teacher-list' %}" method="get" accept-charset="utf-8">
                     <input type="text" class="form-control" name="q" id="search1" placeholder="输入你需要补习的科目（如: 初中数学, 物理）" style="width: 300px">
                     <button class="btn-danger" type="submit">搜 索</button>
                 </form>
