--- a/src/templates/problem_upload.html
+++ b/src/templates/problem_upload.html
@@ -6,13 +6,13 @@
 {% block title %}{{ block.super }}报名做老师{% endblock %}
 
 {% block navbar-left %}
-  {% include "_navbar.html" with active_link="about" %}
+  {% include "_navbar.html" with active_link="teacher-create" %}
 {% endblock %}
 
 {% block splash %}
 <div class="jumbotron jumbotron-carousel corporate-jumbo">
   <div class="container">
-    <center><h1>个人信息</h1></center>
+    <center><h1>上传难题</h1></center>
     <form action="" method="post">{% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-default">完成</button>
