--- a/src/templates/teacher_detail.html
+++ b/src/templates/teacher_detail.html
@@ -6,7 +6,7 @@
 {% block title %}{{ block.super }}老师资料{% endblock %}
 
 {% block navbar-left %}
-  {% include "_navbar.html" with active_link="search_teacher" %}
+  {% include "_navbar.html" with active_link="teacher-list" %}
 {% endblock %}
 
 {% block styles %}
