--- a/src/templates/problem_upload.html
+++ b/src/templates/problem_upload.html
@@ -3,10 +3,10 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ block.super }}报名做老师{% endblock %}
+{% block title %}{{ block.super }}上传难题{% endblock %}
 
 {% block navbar-left %}
-  {% include "_navbar.html" with active_link="teacher-create" %}
+  {% include "_navbar.html" with active_link="problem-upload" %}
 {% endblock %}
 
 {% block splash %}
