--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -28,28 +28,8 @@
                 <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">马上免费注册体验!</a>
                 <p/>
                 <p align="left">我是学生,找找有没有合适的老师:</p>
-                选择你所在的城市和地区:
-                <select class="c-select bfh-states" id="city" name="city">
-                    <option value="">--</option>
-                    {% for city in cities %}
-                        <option value="{{ city.id }}">{{ city.name }}</option>
-                    {% endfor %}
-                </select>
-                <select class="c-select bfh-selectbox" id="district" name="distrct">
-                    <option value="">--</option>
-                    {% for district in districts %}
-                        <option value="{{ district.id }}" class="{{ district.city.id }}">{{ district.name }}</option>
-                    {% endfor %}
-                </select>
-                选择你所在的年级段:
-                <select class="c-select" id="grade" name="grade">
-                    <option value="">--</option>
-                    {% for grade in grades %}
-                    <option value="{{ grade }}">{{ grade.title }}</option>
-                    {% endfor %}
-                </select>
                 <form id="search_teacher_form" action="{% url 'teacher-list' %}" method="get" accept-charset="utf-8">
-                    <input type="text" class="form-control" name="q" id="search1" placeholder="输入你需要补习的科目（如: 数学, 物理）" style="width: 300px">
+                    <input type="text" class="form-control" name="word" id="search1" placeholder="输入你需要补习的科目（如: 数学, 物理）" style="width: 300px">
                     <button class="btn-danger" type="submit" onclick="up()">搜 索</button>
                 </form>
                 <p/>
