--- a/src/templates/problem_detail.html
+++ b/src/templates/problem_detail.html
@@ -34,13 +34,17 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <h1>题目描述</h1>
       {% if object.description %}
+        <h1>题目描述</h1>
         <p>{{ object.description }}</p>
       {% endif %}
       {% if object.picture %}}
-        <div class="text-center"><img class="img-circle centered" src="/media/{{ teacher.picture }}" alt="profile pic"></div>
+        <h1>问题</h1>
+        <div class="text-center"><img class="centered" src="/media/{{ object.picture }}" alt="profile pic"></div>
       {% endif %}
+      <h1>上传者:</h1>
+
+      {{ object.author }}
     </div>
   </div>
 </div>
