--- a/src/templates/teacher_list.html
+++ b/src/templates/teacher_list.html
@@ -9,6 +9,15 @@
   {% include "_navbar.html" with active_link="teacher-list" %}
 {% endblock %}
 
+{% block styles %}
+{{ block.super }}
+<style type="text/css">
+    tr:hover{
+        background-color: #ffa;
+    }
+</style>
+{% endblock styles %}
+
 {% block splash %}
 <div class="jumbotron jumbotron-carousel" style="padding-top: 80px">
 <div class="container">
@@ -54,30 +63,46 @@
 {% if object_list|length == 0 %}
     <h2>对不起!没有符合您要求的老师.</h2>
 {% else %}
-    <div>
+    <table>
+        <tbody>
     {% for teacher in object_list %}
-        <div class="teacher-list">
-        <a href="{% url 'teacher-detail' teacher.id %}"><img class="img-square centered" width="142" height="142" align="left" src="/media/{{ teacher.picture }}"></a>
-        <div style="padding-left: 200px">
-            <h3>
-            {{ teacher.full_name }} {{ teacher.school }}
-            </h3>
-            <p>等级: {{ teacher.level }}</p>
-            <p>
-                科目:
-                {% for sub in teacher.subjects.all %}
-                <a>{{ sub.title }}</a>
-                {% endfor %}
-            </p>
-            <p>
-                <strong>战绩: {{teacher.achievement}}</strong>
-            </p>
+        <tr>
+        <td>
+            <div>
+            <a href="{% url 'teacher-detail' teacher.id %}">
+                <img class="img-square centered" width="142" height="142" align="left" src="/media/{{ teacher.picture }}">
+            </a>
+            </div>
+            <div style="padding-left: 200px">
+                <h3>
+                    {{ teacher.full_name }} {{ teacher.school }}
+                </h3>
+                <p>等级: {{ teacher.level }}</p>
+                <p>
+                    科目:
+                    {% for sub in teacher.subjects.all %}
+                    <a>{{ sub.title }}</a>
+                    {% endfor %}
+                </p>
+                <p>
+                    <strong>战绩: {{teacher.achievement}}</strong>
+                </p>
+            </div>
+        </td>
+        <td>
             <p style="color: red">课程费用: {{teacher.price}}元/小时</p>
             <!--<a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">联系TA!</a>-->
-        </div>
-        </div>
+        </td>
+        <td>
+            <div class="control">
+                <a href="{% url 'teacher-detail' teacher.id %}" target="_blank" alt="detail" title="detail" class="btn btn-control">查看TA</a>
+                <a href="javascript:;" class="btn appoint_current">联系TA</a>
+            </div>
+        </td>
+        </tr>
     {% endfor %}
-    </div>
+        </tbody>
+    </table>
 {% endif %}
 {% endblock container %}
 
